# upstage6

./: .dockerignore  .gitignore  08-langgraph-notebook-v2.ipynb  AGENTS.md  BACKEND.MD  Dockerfile  FRONTEND.MD  GEMINI.md  README.md  WORKING.MD  analisis.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml  report.md  rules.json  version.md  working.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml  run_evaluation_test.py
backend/app/agents/: __init__.py  base.py  utils.py
backend/app/agents/evaluators/: base_evaluator.py  causality_evaluator.py  cliche_evaluator.py  final_evaluator.py  hatebias_evaluator.py  spelling_evaluator.py  tension_evaluator.py  tone_evaluator.py  trauma_evaluator.py
backend/app/agents/metrics/: GenerCliche_metric.py  HateBias_metric.py  causality_metric.py  final_metric.py  tone_Metric.py
backend/app/agents/tools/: GenerCliche_agent.py  HateBias_agent.py  Spelling_Agent.py  TensionCurve_agent.py  Trauma_agent.py  causality_agent.py  split.py  (+8 more)
backend/app/api/: develope_route.py  router.py
backend/app/core/: auth.py  db.py  logging.py  settings.py
backend/app/graph/: graph.py  state.py
backend/app/langgraph/: __init__.py  graph.py
backend/app/llm/: chat.py  client.py  embedding.py
backend/app/observability/: langsmith.py
backend/app/schemas/: agent.py
backend/app/services/: analysis_jobs.py  analysis_runner.py  document_parser.py  eval_report.py  eval_runner.py  issue_normalizer.py  pipeline_runner.py  split_map.py
backend/app/webapi/: analysis.py  auth.py  documents.py  eval.py  routes.py  schemas.py
backend/data/: team.db
backend/data/uploads/: 87b81981-3ed7-4552-b70f-0b5453c4cdc4.docx
backend/migrations/: 001_add_document_meta_and_analysis_columns.sql  002_add_analysis_queue_job_id.sql  003_add_eval_run_delta.sql  004_add_eval_run_meta.sql  005_add_users_and_document_user_id.sql  006_add_document_updated_at.sql  apply_sqlite_migrations.py
backend/scripts/: eval_local.py  eval_report.py  inspect_db.py  list_users.py  migrate_orphaned_docs.py  test_edge_cases.py
(+93 files in other folders)
