[project]
name = "team-contextor-backend"
version = "0.1.0"
description = "CONTEXTOR local backend (FastAPI) - document upload, parse, multi-agent analysis, persistence."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "aiosqlite>=0.20.0",
  "httpx>=0.27.0",
  "python-docx>=1.1.2",
  "pypdf>=4.2.0",
  "openai==1.81.0",
  "langgraph>=1.0.5",
  "langchain>=1.2.3",
  "authlib>=1.6.6",
  "itsdangerous>=2.2.0",
  "python-jose>=3.5.0",
  "olefile>=0.47",
]

[tool.ruff]
target-version = "py311"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]
